--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2,30 +2,34 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Segoe UI", sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 .title {
-  font-family: "Segoe UI", sans-serif;
-  font-size: 3rem;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  color: white;
+  background-color: grey;
+  font-size: 5rem;
   text-align: center;
-  margin: 20px;
+  margin: 30px 0; /* Aumentar margen vertical */
+  text-shadow: 2px 2px 4px rgba(82, 87, 82, 0.5);
+  font-weight: bold;
+  padding: auto;
 }
 
 .subtitle {
-  font-family: "Segoe UI", sans-serif;
+  font-family: 'Arial Narrow Bold', sans-serif;
   font-size: 28px;
   text-align: center;
-  margin: 5px;
+  margin: 15px 0; 
 }
 
 .formProducts {
-  margin: 20px auto;
-  padding: 10px;
+  margin: 50px auto;
+  padding: 30px; 
   width: 350px;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   border-radius: 15px;
@@ -38,17 +42,17 @@
 
 .controls {
   font-size: 20px;
-  margin: 5px;
+  margin: 15px 0; 
   border-radius: 5px;
   border: none;
   box-shadow: 0 2px 12px 6px rgba(0, 0, 0, 0.2);
-  padding: 5px;
+  padding: 15px; 
 }
 
 .btn {
   width: 75%;
   height: 40px;
-  margin: 5px;
+  margin: 15px 0; 
   border-radius: 10px;
   font-size: 1rem;
   border: none;
@@ -65,42 +69,43 @@
 
 .container {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  width: 95%;
-  margin: 20px;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-start;
+  width: 100%;
+  max-width: 768px; 
+  margin: 50px auto; 
+  padding: 0 20px; 
   flex-wrap: wrap;
-  align-content: center;
 }
 
 .card {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  width: 15rem;
-  padding: 0.5rem !important;
-  margin: 3rem;
   display: flex;
   flex-direction: column;
+  width: 200px;
+  height: 480px; 
+  border-radius: 15px;
+  margin: 40px 0; 
+  box-shadow: 0 2px 12px 6px rgba(0, 0, 0, 0.2);
   align-items: center;
-  transition: box-shadow 0.3s ease;
 }
 
 .card-img {
-  width: 250px;
-  height: 250px;
-  padding: 5px;
+  width: 150px;
+  max-height: 240px; 
+  object-fit: contain; 
+  padding: 15px;
 }
 
 .card-body {
-  width: 100%; /* Cambiado a 100% */
-  padding: 10px;
+  width: 100%;
+  padding: 15px;
   text-align: center;
 }
 
 .card-info {
   width: 100%;
-  padding: 5px;
+  padding: 15px;
   text-align: left;
 }
 
