--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -5,31 +5,99 @@
   font-family: "Nunito", sans-serif;
 }
 
+
+body {
+  font-family: Roboto, sans-serif;
+  width: 100%;
+  max-width: 1320px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 15px;
+  padding-right: 15px;
+  align-self: center;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+header {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0px 0px 10px 10px;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #f8f9fa;
+  padding: 1rem;
+}
+
+nav ul {
+  display: flex;
+  list-style: none;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  margin-right: 2rem;
+  margin-left: 3rem;
+  display: flex;
+  align-items: center;
+}
+
+nav ul li:last-child {
+  margin-right: 0;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: #212529;
+}
+
+nav ul li img {
+  margin-right: 10px;
+}
+
+#logo{
+  width: 25rem;
+}
+
+@media (min-width: 1400px) {
+  body {
+    max-width: 1580px;
+  }
+}
+
+
 .title {
-  font-family: 'Arial Narrow Bold', sans-serif;
-  color: white;
-  background-color: grey;
-  font-size: 5rem;
+  font-family: "Borel", cursive;
+  font-size: 3rem;
   text-align: center;
-  margin: 30px 0; /* Aumentar margen vertical */
-  text-shadow: 2px 2px 4px rgba(82, 87, 82, 0.5);
-  font-weight: bold;
-  padding: auto;
+  margin: 20px;
 }
 
 .subtitle {
-  font-family: 'Arial Narrow Bold', sans-serif;
+  font-family: "Borel", cursive;
   font-size: 28px;
   text-align: center;
-  margin: 15px 0; 
+  margin: 5px;
 }
 
 .formProducts {
-  margin: 50px auto;
-  padding: 30px; 
+  margin: 20px auto;
+  padding: 10px;
   width: 350px;
   display: flex;
   flex-direction: column;
+  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   border-radius: 15px;
@@ -42,17 +110,17 @@
 
 .controls {
   font-size: 20px;
-  margin: 15px 0; 
+  margin: 5px;
   border-radius: 5px;
   border: none;
   box-shadow: 0 2px 12px 6px rgba(0, 0, 0, 0.2);
-  padding: 15px; 
+  padding: 5px;
 }
 
 .btn {
   width: 75%;
   height: 40px;
-  margin: 15px 0; 
+  margin: 5px;
   border-radius: 10px;
   font-size: 1rem;
   border: none;
@@ -69,43 +137,43 @@
 
 .container {
   display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 95%;
+  margin: 20px;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 100%;
-  max-width: 768px; 
-  margin: 50px auto; 
-  padding: 0 20px; 
   flex-wrap: wrap;
+  align-content: center;
 }
 
 .card {
   display: flex;
-  flex-direction: column;
   width: 200px;
-  height: 480px; 
+  height: 300px;
   border-radius: 15px;
-  margin: 40px 0; 
+  margin: 5px 15px;
   box-shadow: 0 2px 12px 6px rgba(0, 0, 0, 0.2);
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
   align-items: center;
 }
 
 .card-img {
   width: 150px;
-  max-height: 240px; 
-  object-fit: contain; 
-  padding: 15px;
+  padding: 0.5rem;
 }
 
 .card-body {
-  width: 100%;
-  padding: 15px;
+  width: 200px;
+  padding: 5px;
   text-align: center;
 }
 
 .card-info {
   width: 100%;
-  padding: 15px;
+  padding: 5px;
   text-align: left;
 }
 
