--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -1,17 +1,40 @@
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Borel&family=Nunito&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/css/style.css" />
-    <title>{{title}}</title>
-  </head>
-  <body>
-    {{{body}}}
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Borel&family=Nunito&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <title>{{title}}</title>
+</head>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="./index.html">Inicio</a></li>
+        <li><a href="./index.html">Servicios</a></li>
+        <li><a href="./index.html">Nosotros</a></li>
+        <li>
+          <div id="logo">
+            <a href="#">
+              <img src="/img/logo.png" alt="logo principal de Makalú" id="logo">
+            </a>
+          </div>
+        </li>
+        <li><a href="#">Contacto</a></li>
+        <li>
+          <img src="#" alt="">
+          <a href="#">Carrito</a>
+        </li>
+        <li>
+          <img src="./assets/icons/user.png" alt="">
+          <a href="#">Mi cuenta</a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+  {{{body}}}
+</body>
 </html>
