--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -78,14 +78,14 @@ nav ul li img {
 
 
 .title {
-  font-family: "Borel", cursive;
+  font-family: Roboto, sans-serif;
   font-size: 3rem;
   text-align: center;
   margin: 20px;
 }
 
 .subtitle {
-  font-family: "Borel", cursive;
+  font-family: Roboto, sans-serif;
   font-size: 28px;
   text-align: center;
   margin: 5px;
@@ -149,7 +149,7 @@ nav ul li img {
 .card {
   display: flex;
   width: 200px;
-  height: 300px;
+  height: 400px;
   border-radius: 15px;
   margin: 5px 15px;
   box-shadow: 0 2px 12px 6px rgba(0, 0, 0, 0.2);
