desafio practica integradora II

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,19 +1,9 @@
-<h1 class="title">Productos</h1>
-<div class="container">
+<h1>Bienvenidos y bienvenidas a nuestra tienda</h1>
 
-  {{#each listaProductos}}
-    <div class="card" id={{this.id}}>
-      <div class="card-body">
-        <img class="card-img" src={{this.thumbnail}} alt={{this.title}} />
-        <h5 class="card-title">{{this.title}}</h5>
-        <div class="card-info">
-          <p class="card-text">{{this.description}}</p>
-          <p class="card-text">Categoría: {{this.category}}</p>
-          <p class="card-text">Código: {{this.code}}</p>
-          <p class="card-text">Stock: {{this.stock}}</p>
-          <p class="card-text">Precio: ${{this.price}}</p>
-        </div>
-      </div>
-    </div>
-  {{/each}}
-</div>
+<h3>Si no eres cliente puedes registrarte</h3>
+<a href="/register"><button
+    class="btn btn-outline-success w-25"
+  >Registrarse</button></a>
+
+<h3>Si eres cliente puedes iniciar sesión</h3>
+<a href="/login"><button class="btn btn-outline-success w-25">Iniciar sesión</button></a>
