--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -5,92 +5,29 @@
   font-family: "Nunito", sans-serif;
 }
 
-
-body {
-  font-family: Roboto, sans-serif;
+.navbar-nav {
   width: 100%;
-  max-width: 1320px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
-  align-self: center;
 }
-
-a {
-  text-decoration: none;
-  color: black;
-}
-
-header {
+.cart-user {
   display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 0px 0px 10px 10px;
-}
-
-nav {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #f8f9fa;
-  padding: 1rem;
-}
-
-nav ul {
-  display: flex;
-  list-style: none;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-}
-
-nav ul li {
-  margin-right: 2rem;
-  margin-left: 3rem;
-  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: space-around;
   align-items: center;
 }
-
-nav ul li:last-child {
-  margin-right: 0;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: #212529;
-}
-
-nav ul li img {
-  margin-right: 10px;
-}
-
-#logo{
-  width: 25rem;
-}
-
-@media (min-width: 1400px) {
-  body {
-    max-width: 1580px;
-  }
-}
-
-
 .title {
-  font-family: Roboto, sans-serif;
+  font-family: "Borel", cursive;
   font-size: 3rem;
   text-align: center;
   margin: 20px;
 }
-
 .subtitle {
-  font-family: Roboto, sans-serif;
+  font-family: "Borel", cursive;
   font-size: 28px;
   text-align: center;
   margin: 5px;
 }
-
 .formProducts {
   margin: 20px auto;
   padding: 10px;
@@ -103,7 +40,6 @@ nav ul li img {
   border-radius: 15px;
   box-shadow: 0 2px 12px 6px rgba(0, 0, 0, 0.2);
 }
-
 .label {
   font-size: 20px;
 }
@@ -129,17 +65,39 @@ nav ul li img {
 .btn-add {
   background-color: rgb(61, 239, 108);
 }
-
+.btn-addToCart {
+  background-color: aquamarine;
+  width: 100%;
+  height: 40px;
+  margin-top: 25px;
+}
 .btn-delete {
   background-color: rgb(242, 73, 73);
   color: white;
 }
+.paginationPanel {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
 
+.page {
+  font-size: 16px;
+  margin: 5px;
+}
+.btn-paginate {
+  width: 100px;
+  height: 40px;
+  background-color: aqua;
+}
 .container {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 95%;
+  width: 100%;
   margin: 20px;
   flex-direction: row;
   flex-wrap: wrap;
@@ -148,7 +106,7 @@ nav ul li img {
 
 .card {
   display: flex;
-  width: 200px;
+  width: 250px;
   height: 400px;
   border-radius: 15px;
   margin: 5px 15px;
@@ -158,30 +116,35 @@ nav ul li img {
   align-content: center;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
 }
-
 .card-img {
-  width: 150px;
-  padding: 0.5rem;
+  width: 100px;
+  max-height: 100px;
+  padding: 5px;
 }
 
 .card-body {
   width: 200px;
+  height: 300px;
   padding: 5px;
   text-align: center;
 }
-
 .card-info {
   width: 100%;
   padding: 5px;
   text-align: left;
 }
-
 .card-title {
   text-align: center;
-  font-size: 20px;
+  font-size: 18px;
+  padding: 5px;
 }
 
 .card-text {
   font-size: 14px;
+}
+
+.code {
+  font-size: 10px;
 }
