desafio practica integradora II

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,9 +1,9 @@
-<h1>Bienvenidos y bienvenidas a nuestra tienda</h1>
+<h1>MAKALU IMPRESORAS</h1>
 
-<h3>Si no eres cliente puedes registrarte</h3>
+<h3>Si no tienes cuenta puedes registrarte</h3>
 <a href="/register"><button
     class="btn btn-outline-success w-25"
   >Registrarse</button></a>
 
-<h3>Si eres cliente puedes iniciar sesión</h3>
+<h3>¿Ya tienes cuenta? inicia sesión</h3>
 <a href="/login"><button class="btn btn-outline-success w-25">Iniciar sesión</button></a>
