--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -17,29 +17,36 @@
   align-items: center;
 }
 .title {
-  font-family: "Borel", cursive;
-  font-size: 3rem;
+  font-family: 'Arial Narrow Bold', sans-serif;
+  color: white;
+  background-color: grey;
+  font-size: 5rem;
   text-align: center;
-  margin: 20px;
+  margin: 30px 0; /* Aumentar margen vertical */
+  text-shadow: 2px 2px 4px rgba(82, 87, 82, 0.5);
+  font-weight: bold;
+  padding: auto;
 }
+
 .subtitle {
-  font-family: "Borel", cursive;
+  font-family: 'Arial Narrow Bold', sans-serif;
   font-size: 28px;
   text-align: center;
-  margin: 5px;
+  margin: 15px 0; 
 }
+
 .formProducts {
-  margin: 20px auto;
-  padding: 10px;
+  margin: 50px auto;
+  padding: 30px; 
   width: 350px;
   display: flex;
   flex-direction: column;
-  flex-wrap: nowrap;
   justify-content: center;
   align-items: center;
   border-radius: 15px;
   box-shadow: 0 2px 12px 6px rgba(0, 0, 0, 0.2);
 }
+
 .label {
   font-size: 20px;
 }
